fixed header problem and other bugs on mobile mode

--- a/static/css/about.css
+++ b/static/css/about.css
@@ -11,7 +11,7 @@
 
 
 .carousel{
-    width:50%;
+    width:45%;
     position:relative;
     overflow-y:hidden;
 }
